--- a/.github/actions/lambda-deploy/action.yml
+++ b/.github/actions/lambda-deploy/action.yml
@@ -21,7 +21,8 @@ runs:
           aws-region: ap-northeast-1
 
       - name: Deploy Lambda
+        shell: bash
         run: |
           aws lambda update-function-code \
           --function-name ${{ inputs.env-name }}-${{ inputs.dir-name }} \
-          --zip-file ./tmp/${{ inputs.dir-name }}/*.zip
+          --zip-file fileb://./tmp/${{ inputs.dir-name }}/function.zip
