--- a/.github/workflows/dev-lambda-deploy.yml
+++ b/.github/workflows/dev-lambda-deploy.yml
@@ -44,6 +44,18 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Download Zip Migrateuser
+        uses: actions/download-artifact@v4
+        with:
+          name: migrateuser
+          path: ./tmp/migrateuser
+
+      - name: Download Zip Presignup
+        uses: actions/download-artifact@v4
+        with:
+          name: presignup
+          path: ./tmp/presignup
+
       - name: Deploy Lambda Migateuser
         uses: ./.github/actions/lambda-deploy
         with:
