--- a/.github/workflows/dev-lambda-deploy.yml
+++ b/.github/workflows/dev-lambda-deploy.yml
@@ -18,7 +18,7 @@ jobs:
     steps:
       - name: Generate Zip
         run: |
-          make generate
+          make -C ../../ generate
 
   upload-zip:
     name: upload-zip
