--- a/.github/actions/lambda-deploy/action.yml
+++ b/.github/actions/lambda-deploy/action.yml
@@ -14,11 +14,16 @@ runs:
       - name: Checkout
         uses: actions/checkout@v4
 
-#      - name: Configure AWS Credentials
-#        uses: aws-actions/configure-aws-credentials@v4
-#        with:
-#          role-to-assume: ${{ inputs.assume-role-arn }}
-#          aws-region: ap-northeast-1
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: ${{ inputs.assume-role-arn }}
+          aws-region: ap-northeast-1
+
+      - name: Generate Zip
+        shell: bash
+        run: |
+          make gen DIR=${{ inputs.dir-name }}
 
       - name: Deploy Lambda
         shell: bash
