--- a/.github/workflows/dev-lambda-deploy.yml
+++ b/.github/workflows/dev-lambda-deploy.yml
@@ -1,4 +1,4 @@
-name: Dev AWS Lambda Deploy
+name: Dev Lambda Deploy
 
 on:
   push:
@@ -11,58 +11,23 @@ permissions:
   contents: read
 
 jobs:
-  upload-zip:
-    name: upload-zip
+  deploy-zip:
+    name: deploy-zip
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Generate Zip
-        run: |
-          make generate
-
-      - name: Upload Zip Migrateuser
-        uses: actions/upload-artifact@v4
-        with:
-          name: migrateuser
-          path: tmp/migrateuser/function.zip
-
-      - name: Upload Zip Presignup
-        uses: actions/upload-artifact@v4
-        with:
-          name: presignup
-          path: tmp/presignup/function.zip
-
-  deploy:
-    name: deploy
-    needs: [upload-zip]
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Download Zip Migrateuser
-        uses: actions/download-artifact@v4
-        with:
-          name: migrateuser
-
-      - name: Download Zip Presignup
-        uses: actions/download-artifact@v4
-        with:
-          name: presignup
-
-      - name: Deploy Lambda Migateuser
-        uses: ./.github/actions/lambda-deploy
+      - name: Deploy zip migrateuser
+        uses: .github/actions/lambda-deploy
         with:
           assume-role-arn: ${{ vars.ASSUME_ROLE_ARN_DEV }}
           env-name: dev
           dir-name: migrateuser
 
-      - name: Deploy Lambda Presignup
-        uses: ./.github/actions/lambda-deploy
+      - name: Deploy zip presignup
+        uses: .github/actions/lambda-deploy
         with:
           assume-role-arn: ${{ vars.ASSUME_ROLE_ARN_DEV }}
           env-name: dev
