--- a/.github/workflows/stg-lambda-deploy.yml
+++ b/.github/workflows/stg-lambda-deploy.yml
@@ -1,9 +1,10 @@
 name: Stg Lambda Deploy
 
 on:
-  push:
-    branches:
-      - main
+  # TODO コメントアウト外す
+#  push:
+#    branches:
+#      - main
   workflow_dispatch:
 
 permissions:
